k8s/overlays/gcp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amitra-ingress
  namespace: amitra
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "amitra-cert"
spec:
  rules:
    - host: amitra-commerce.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs-bff
                port:
                  number: 3000
